Modificación de swagger ( a falta de definir bien el get para que devuelva lista) Creación de endpoints postOnePerson y deleteOnePerson a falta de pruebas por fallo en el controller(swagger posible causante)
