# src/main/resources/Swagger/swagger.yml
@@ -1,100 +1,146 @@
 @Todo: Actualizar endpoints
-swagger: '2.0'
-info:
-  description: 'person api'
-  version: 1.0.0
-  title: Swagger 
-host: local
-basePath: /v1
-tags:
-  - name: person
-    description: Operations about user
-    externalDocs:
-      description: Find out more about our person
-      url: http://swagger.io
-schemes:
-  - https
-  - http
-paths:
-  /person:
-    get:
-      tags:
-        - person
-      summary: Get one people in database
-      description: ''
-      operationId: getOnePerson
-      produces:
-        - application/json
-        - application/xml
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            $ref: '#/definitions/Person'
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
-    post:
-      tags:
-        - person
-      summary: Add one people in database
-      description: ''
-      operationId: postOnePerson
-      produces:
-        - application/json
-        - application/xml
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            $ref: '#/definitions/Person'
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
-    delete:
-      tags:
-        - person
-      summary: Delete one people in database
-      description: ''
-      operationId: deleteOnePerson
-      produces:
-        - application/json
-        - application/xml
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            $ref: '#/definitions/Person'
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found      
+ swagger: '2.0'
+ info:
+   description: 'person api'
+   version: 1.3.1
+   title: Swagger
+ host: local
+ basePath: /v1
+ tags:
+   - name: person
+     description: Operations about user
+     externalDocs:
+       description: Find out more about our person
+       url: http://swagger.io
+ schemes:
+   - https
+   - http
+ paths:
+   /person:
+     get:
+       tags:
+         - person
+       summary: Get all people from database
+       description: ''
+       operationId: getAllPeople
+       produces:
+         - application/json
+         - application/xml
+       responses:
+         '200':
+           description: successful operation
+           schema:
+             $ref: '#/definitions/ListPeople'
+         '400':
+           description: Invalid list supplied
+         '404':
+           description: List not found
+     post:
+       tags:
+         - "person"
+       summary: "Add a new person to the persistance"
+       description: ""
+       operationId: "addPerson"
+       consumes:
+         - "application/json"
+         - "application/xml"
+       produces:
+         - "application/xml"
+         - "application/json"
+       parameters:
+         - in: "body"
+           name: "body"
+           description: "Person object that needs to be added to the databse"
+           required: true
+           schema:
+             $ref: "#/definitions/PersonDto"
+       responses:
+         '200':
+           description: successful operation
+           schema:
+             $ref: '#/definitions/PersonDto'
+         "405":
+           description: "Invalid input"
 
-definitions:
-  Person:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      username:
-        type: string
-      firstName:
-        type: string
-      lastName:
-        type: string
-      email:
-        type: string
-      password:
-        type: string
-      phone:
-        type: string
-      userStatus:
-        type: integer
-        format: int32
-        description: User Status
-externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
+
+
+   /person/{id}:
+     get:
+       tags:
+         - "person"
+       summary: "Find person by ID"
+       description: "Returns a single person"
+       operationId: "getPersonById"
+       produces:
+         - "application/xml"
+         - "application/json"
+       parameters:
+         - in: path
+           name: id
+           description: "ID of person to return"
+           required: true
+           type: "integer"
+           format: "int64"
+       responses:
+         "200":
+           description: "successful operation"
+           schema:
+             $ref: "#/definitions/PersonDto"
+         "400":
+           description: "Invalid ID supplied"
+         "404":
+           description: "Person not found"
+     delete:
+       tags:
+         - "person"
+       summary: "Delete a person by id"
+       description: ""
+       operationId: "deleteOnePerson"
+       produces:
+         - "application/xml"
+         - "application/json"
+       parameters:
+         - name: id
+           in: path
+           required: true
+           type: "integer"
+       responses:
+         '200':
+           description: successful operation
+           schema:
+             $ref: '#/definitions/PersonDto'
+         "400":
+           description: "Invalid ID supplied"
+         "404":
+           description: "Person not found"
+
+ definitions:
+   ListPeople:
+     type: array
+     items:
+       type: object
+   PersonDto:
+     type: object
+     properties:
+       id:
+         type: integer
+         format: int64
+       username:
+         type: string
+       firstName:
+         type: string
+       lastName:
+         type: string
+       email:
+         type: string
+       password:
+         type: string
+       phone:
+         type: string
+       userStatus:
+         type: integer
+         format: int32
+         description: User Status
+ externalDocs:
+   description: Find out more about Swagger
+   url: http://swagger.io
